name:                multiaddr-connect
version:             0.1.0.0
synopsis:            Library for dialing connections using multiaddr notation
description:         Please see README.md
homepage:            https://github.com/SupraSummus/haskell-multiaddr-connect#readme
license:             BSD3
license-file:        LICENSE
author:              Jan Rydzewski
maintainer:          flegmer@gmail.com
copyright:           2016 Jan Rydzewski
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Multiaddr.Connect,
                       Network.Multiaddr.Connector.Type,
                       Network.Multiaddr.Connector.IP4.TCP,
                       Network.Multiaddr.Connector.Loopback
  build-depends:       base >= 4.7 && < 5, multipath, bytestring, network
  default-language:    Haskell2010

executable multiaddr-connect
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       multiaddr-connect,
                       bytestring,
                       multipath
  default-language:    Haskell2010

test-suite multiaddr-connect-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , multiaddr-connect
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SupraSummus/haskell-multiaddr-connect
